# VeridictBase

./: .game_init.json
resources/assets/scenes/: game_scene.json  main_scene.json
resources/assets/scripts/: HEADER.cpp
resources/assets/scripts/VerCore/: Camera.hpp  ClientGestion.hpp  HelloClient.hpp  HelloServer.hpp  HelloWEBSOCKET.hpp  IReflectable.hpp  SceneManager.hpp  SpriteGroup.hpp  Tools.hpp  VerFile.hpp  sha1.hpp
resources/program/: CMakeLists.txt  build.sh  rxxd
